--- a/HRManagementApp/HRManagementApp/Web.config
+++ b/HRManagementApp/HRManagementApp/Web.config
@@ -20,4 +20,4 @@
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
-<connectionStrings><add name="HREntities" connectionString="metadata=res://*/Services.HREntity.csdl|res://*/Services.HREntity.ssdl|res://*/Services.HREntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=dserver.cakewalk.in;initial catalog=CakewalkHR;user id=sa;password=pareek777^*;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+<connectionStrings><add name="HREntities" connectionString="metadata=res://*/Services.HREntity.csdl|res://*/Services.HREntity.ssdl|res://*/Services.HREntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=dserver.cakewalk.in;initial catalog=CakewalkHR;user id=sa;password=pareek777^*;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
